fix: form spacing

--- a/src/sass/pages/contact/_form.scss
+++ b/src/sass/pages/contact/_form.scss
@@ -17,7 +17,7 @@
     form {
       display: grid;
       grid-template-columns: 1fr;
-      column-gap: 24px;
+      column-gap: 40px;
       row-gap: 32px;
       align-items: start;
 
